inyoka/static/style/main.css
/**
 * style.main
 * ~~~~~~~~~~
 *
 * Some global style definitions.
 *
 * :copyright: 2007 by Armin Ronacher, Benjamin Wiegand, Christopher Grebs,
 *                     Marian Sigler.
 * :license: GNU GPL.
 */


/*** Elements Styles **********************************************************/

* {
  padding: 0;
  margin: 0;
}

body {
  font-family: 'Verdana', 'Deja-Vu Sans', 'Bitstream Vera Sans', sans-serif;
  color: black;
  font-size: 0.9em;
}

html, body {
  background-color: #b3ab9a;
}

div.wrap {
  margin: 10px;
  background-image: url(../img/float-left.jpg);
  background-repeat: repeat-y;
  background-color: #FFFFFF;
  border-bottom: #aba393 1px solid;
  min-width: 780px;
}

div.wrap2 {
  background-image:url(../img/float-top.jpg);
  background-repeat:repeat-x;
}

div.wrap3 {
  background-image:url(../img/head.jpg);
  background-repeat:no-repeat;
}

div.wrap4 {
  background-image:url(../img/float-right.jpg);
  background-position:right;
  background-repeat:repeat-y;
}

div.wrap5 {
  background-image:url(../img/head-right.png);
  background-position:top right;
  background-repeat:no-repeat;
}

div.body {
  padding: 10px 0 20px 0;
}

a, :link, :visited {
  color: #956205;
  text-decoration: underline;
  cursor: pointer;
}

a img, :link img, :visited img {
  border: none;
}

a.strong {
  color: #191919;
  font-weight: bold;
}

input {
  border: 1px solid #AAA;
  font-family: 'Verdana', 'Deja-Vu Sans', 'Bitstream Vera Sans', sans-serif;
  font-size: 1em;
}

input[type="radio"] {
  border: 0;
}

input[type="submit"], input[type="button"], input[type="reset"] {
  border-color: #777;
  background-color: #eee;
}

input[type="submit"]:active, input[type="button"]:active, input[type="reset"]:active {
  border: 1px #aaa inset;
  background-color: #f2f2f2!important;
}

input[type="submit"] {
  border-color: #333;
  font-weight: bold;
}

input.cancel[type="submit"] {
  border-color: #777;
  font-weight: normal;
}

input.disabled, input.disabled:active {
  color: #888!important;
  background-color: #e2e2e2!important;
  border: 1px solid #ccc!important;
}

input.linkbutton {
  height: 1.2em;
  border: none;
  border-color: #F8F8F8;
  border-bottom: #956205 1px solid;
  font-weight: normal;
  background-color: #F8F8F8;
  color: #956205;
  cursor: pointer;
  padding: 0;
  margin: 0;
  font-family: 'Verdana', 'Deja-Vu Sans', 'Bitstream Vera Sans', sans-serif;
}

input.linkbutton:active {
  border: none;
  background-color: #F8F8F8;
  border-color: #F8F8F8;
  border-bottom: #956205 1px solid;
  margin: 0;
  padding: 0;
}

textarea {
  border: 1px solid #AAA;
  width:100%;
}

div.actions {
  margin: 1em 0 0 0;
}

select {
  border: 1px solid #AAA;
  font-family: 'Verdana', 'Deja-Vu Sans', 'Bitstream Vera Sans', sans-serif;
  font-size: 1em;
}

hr {
  border: 0;
  height: 1px;
  background-color: #AAA;
}

h1, h2, h3, h4 {
  font-family: 'Trebuchet MS', 'Verdana', sans-serif;
  font-weight: bold;
  margin: 0.7em 0.0em 0.4em;
}

h1 { font-size: 1.8em; }
h2 { font-size: 1.5em; }
h3 { font-size: 1.3em; }
h4 { font-size: 1.1em; }

dt {
  font-weight: bold;
}

dt em {
  font-size: 0.8em;
  font-weight: normal;
}

dd {
  margin: 0.3em 0 0 2em;
}

dl {
  margin-bottom:0.7em;
}

form dt {
    margin: 1em 0 0 0;
}

blockquote {
  border-left: solid 3px #888;
  font-style: italic;
  color: #333;
  padding-left: 0.4em;
  margin-left: 1.0em;
}

code {
  font-family: monospace;
}

pre {
  background-color: #eee;
  font-family: monospace;
  border: 1px solid #aaa;
  padding: 0 0.4em;
  margin: 0.5em 1em;
  overflow: auto;
  font-style: normal;
}

ol ul, ol ol, ul ol, ol ul {
  margin: 0;
}

li p {
  margin: 0!important;
}

li p + p {
  margin-top: 0.5em!important;
}

/*** Pagination *************************************************************/
div.pagination_right {
    float: right;
}

div.pagination .pageselect, div.pagination .next, div.pagination .ellipsis, div.pagination .prev {
    font-size: 13px;
    line-height: 1.4em;
    background-color: white;
    height: 1.4em;
    padding: 0 0.5em 0 0.5em!important;
    margin-left: 1px;
}

div.pagination .pageselect, div.pagination .next, div.pagination .prev {
    border: 1px solid #aaa;
    padding: 4px;
    text-decoration: none;
}

div.pagination span.comma {
    display: none;
}

div.pagination .disabled {
    border-color: #ddd;
    color: #ddd;
}

div.pagination .ellipsis {
    background-color: transparent!important;
}

div.pagination span.active {
    color: white;
    background-color: #aaa;
}

div.pagination a {
    color: #555;
}

div.pagination a:hover {
    background-color: #555;
    color: white;
}

/*** Table Style ************************************************************/

table {
  width: 100%;
  margin-bottom: 0.7em;
  border-collapse: collapse;
  border-spacing: 0px;
  border: solid 1px #ccc;
}

table th {
  text-align: left;
}

table tr.head th,
table thead th {
    background-image: url('../img/table-header.png');
    background-repeat: repeat-x;
    background-color: #f5f1e6;
    padding: 0.3em 0;
    text-align: center;
    color: #673B1A;
    vertical-align:middle;
}

table tr.empty td {
    color: #444;
    background-color: #eee;
    padding: 8px;
    text-align: center;
}

table tr.head a {
    color: black;
    text-decoration: none;
}

table thead th a {
  color: #000;
  text-decoration:none;
}

table thead td {
  background-color:#f8f8f8;
  border-top: 1px solid #ccc;
  border-bottom: 1px solid #ccc;
  padding: 0.3em 0.6em;
}

table tbody th,
table tbody td {
  border-color: #ccc;
  border-style: solid;
  border-width: 1px 0 1px 0;
  vertical-align: middle;
}

table tbody th {
  background: #f2f2f2 url(../img/table-header-alternative.png);
  color: #333333;
  padding: 0.3em 0;
}

table tbody th a {
  color: #666;
  text-decoration: none;
}

table tbody td {
  padding: 0.3em 0.6em;
}

table tfoot td {
  background-color: #f8f8f8;
  border-top: 1px solid #ccc;
  border-bottom: 1px solid #ccc;
  padding: 0.3em 0.6em;
}
/* ... */

